src/ui/snapshots/state/cleanup/results/failed_tab.snap
---
source: src/ui/state/cleanup/results.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                Cleanup Mode - Results                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ ✅ Deleted (0)  │ ❌ Failed (2)                                                                                      │" Hidden by multi-width symbols: [(3, " "), (21, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Failed────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│→ ❌ patch/main-6.6.2 (target: main, version: 6.6.2) - Branch is checked out                                          │" Hidden by multi-width symbols: [(4, " ")]
"│  ❌ patch/next-6.6.1 (target: next, version: 6.6.1) - Protected branch                                               │" Hidden by multi-width symbols: [(4, " ")]
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Tab: Switch view  ↑/↓: Navigate  q: Exit                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
