src/ui/snapshots/state/cleanup/results/mixed_results.snap
---
source: src/ui/state/cleanup/results.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                            Cleanup Mode - Results                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────┐"
"│ ✅ Deleted (2)  │ ❌ Failed (1)                                              │" Hidden by multi-width symbols: [(3, " "), (21, " ")]
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Deleted───────────────────────────────────────────────────────────────────────┐"
"│→ ✅ patch/main-6.6.3 (target: main, version: 6.6.3)                          │" Hidden by multi-width symbols: [(4, " ")]
"│  ✅ patch/next-6.6.1 (target: next, version: 6.6.1)                          │" Hidden by multi-width symbols: [(4, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Tab: Switch view  ↑/↓: Navigate  q: Exit                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
