src/ui/snapshots/state/cleanup/results/no_failures.snap
---
source: src/ui/state/cleanup/results.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                Cleanup Mode - Results                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ ✅ Deleted (2)  │ ❌ Failed (0)                                                                                      │" Hidden by multi-width symbols: [(3, " "), (21, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Failed────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                            No failures - all selected branches were successfully deleted!                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Tab: Switch view  ↑/↓: Navigate  q: Exit                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
