src/ui/snapshots/state/cleanup/results/success_tab.snap
---
source: src/ui/state/cleanup/results.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                Cleanup Mode - Results                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ ✅ Deleted (2)  │ ❌ Failed (0)                                                                                      │" Hidden by multi-width symbols: [(3, " "), (21, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Deleted───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│→ ✅ patch/main-6.6.3 (target: main, version: 6.6.3)                                                                  │" Hidden by multi-width symbols: [(4, " ")]
"│  ✅ patch/main-6.6.2 (target: main, version: 6.6.2)                                                                  │" Hidden by multi-width symbols: [(4, " ")]
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Tab: Switch view  ↑/↓: Navigate  q: Exit                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
